# high-frequency_trading

./: .env  Cargo.toml  Readme.md
migrations/: 20250726235038_init.sql
src/: main.rs
src/config/: mod.rs
src/connection/: db.rs  mod.rs
src/controllers/: auth_controller.rs  user_controller.rs  wallet_controller.rs
src/dto/: minimal_order.rs  mod.rs
src/engine/: ws_service.rs
src/enums/: mod.rs  order_side.rs  order_status.rs  order_type.rs  transaction_type.rs  types.rs
src/matching/: trade.rs
src/middleware/: auth.rs
src/models/: asset_wallet.rs  bank_list.rs  booking.rs  coin.rs  escrow.rs  mod.rs  order.rs  wallet.rs
src/payloads/: create_order_payload.rs  mod.rs  order_payload.rs  order_request.rs
src/repositories/: auth_repository.rs  bank_list_repository.rs  booking_repository.rs  escrow_repository.rs  mod.rs  order_repository.rs  trade_repository.rs  user_repository.rs  wallet_repository.rs
src/responses/: login_responses.rs  responses.rs
src/router/: url.rs
src/services/: auth_service.rs  mod.rs  order_matching_service.rs  order_service.rs  trade_engine.rs  user_service.rs
src/utils/: jwt.rs
src/ws/: mod.rs  ws_channel.rs  ws_handler.rs  ws_server.rs
